--- a/MineClicker/index.html
+++ b/MineClicker/index.html
@@ -88,7 +88,7 @@
             </div>
         </div>
 
-        <div id="inventory" style="background-image: url('HotBar.png')">
+        <div id="inventory" style="background-image: url('images/HotBar.png')">
             <div class="slot"></div>
             <div class="slot"></div>
             <div class="slot"></div>
