--- a/TeamClicker.1/clickerMain.html
+++ b/TeamClicker.1/clickerMain.html
@@ -13,7 +13,7 @@
         <button id="continueGame" disabled>Continue</button>
         <button id="SaveProgress" disabled>Save progress</button>
         <button id="muteMusic" disabled>Mute Music</button>
-      
+        <!--<button id="SellAll" disabled>Sell All</button>-->
     </div>
     <div class="insidediv">
         <button id="lessonbutton">Кликай по блокам(наведись на меня)!</button>
