--- a/MineClicker/manual.html
+++ b/MineClicker/manual.html
@@ -1,4 +1,23 @@
-235r234g4ev4gv43g2v43bv43
-<b><b>45b
-    45
-</b></b>
+<!DOCTYPE html>
+<html>
+    <head>
+        <meta charset="UTF-8">
+
+        <link rel="stylesheet" href="styles/manual.css">
+    </head>
+    <body>
+
+        <div class="main">
+            <img src="images/manual.png" width="100%">
+            <p>
+                <b>Это краткий мануал по нашей игре</b> тут вы сможете найти все про управление: 
+                <ul>
+                <li>На кнопки 1,2,3,4 вы можете менять инструменты</li>
+                <li>Кликните по торговцу,чтобы продать все блоки</li>
+                <li>Кликайте по блокам,чтобы их сломать,так же вы можете улучшать предметы в правом углу экрана</li>
+                </ul>
+            </p>
+        </div>
+        
+    </body>
+</html>
