--- a/MineClicker/index.html
+++ b/MineClicker/index.html
@@ -20,6 +20,8 @@
                 <button id="SaveProgress">Save progress</button>
                 <button id="manual">Manual</button>
                 <button id="muteMusic">Mute Music</button>
+                <input type="file" id="import" accept=".json" />
+                <button id="export">Export</button>
             </div>
         </div>
         
